crates/service/tests/signature_help/snapshots/features__signature_help__call_indirect_inline_func_type.snap
---
source: crates/service/tests/signature_help/mod.rs
expression: response
---
{
  "signatures": [
    {
      "label": "(func (param f32) (param i32) (result f64))",
      "parameters": [
        {
          "label": [
            6,
            17
          ]
        },
        {
          "label": [
            18,
            29
          ]
        }
      ],
      "activeParameter": 0
    }
  ],
  "activeSignature": 0
}
