crates/service/tests/signature_help/snapshots/features__signature_help__middle.snap
---
source: crates/service/tests/signature_help/mod.rs
expression: response
---
{
  "signatures": [
    {
      "label": "(func $func (param i32) (param i32) (param i32))",
      "parameters": [
        {
          "label": [
            12,
            23
          ]
        },
        {
          "label": [
            24,
            35
          ]
        },
        {
          "label": [
            36,
            47
          ]
        }
      ],
      "activeParameter": 1
    }
  ],
  "activeSignature": 0
}
