crates/service/tests/signature_help/snapshots/features__signature_help__no_params.snap
---
source: crates/service/tests/signature_help/mod.rs
expression: response
---
{
  "signatures": [
    {
      "label": "(func $func (result i32) (result f32) (result f64))",
      "documentation": {
        "kind": "markdown",
        "value": ""
      },
      "parameters": []
    }
  ],
  "activeSignature": 0
}
