crates/service/tests/signature_help/snapshots/features__signature_help__no_params_no_results.snap
---
source: crates/service/tests/signature_help/mod.rs
expression: response
---
{
  "signatures": [
    {
      "label": "(func $func)",
      "documentation": {
        "kind": "markdown",
        "value": ""
      },
      "parameters": []
    }
  ],
  "activeSignature": 0
}
