crates/service/tests/signature_help/snapshots/features__signature_help__no_results.snap
---
source: crates/service/tests/signature_help/mod.rs
expression: response
---
{
  "signatures": [
    {
      "label": "(func $func (param $p i32) (param f32) (param f64))",
      "parameters": [
        {
          "label": [
            12,
            26
          ]
        },
        {
          "label": [
            27,
            38
          ]
        },
        {
          "label": [
            39,
            50
          ]
        }
      ],
      "activeParameter": 0
    }
  ],
  "activeSignature": 0
}
