crates/service/tests/signature_help/snapshots/features__signature_help__non_first_param.snap
---
source: crates/service/tests/signature_help/mod.rs
expression: response
---
{
  "signatures": [
    {
      "label": "(func $func (param i32) (param i32) (result i32))",
      "documentation": {
        "kind": "markdown",
        "value": ""
      },
      "parameters": [
        {
          "label": [
            12,
            23
          ]
        },
        {
          "label": [
            24,
            35
          ]
        }
      ],
      "activeParameter": 1
    }
  ],
  "activeSignature": 0
}
